<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:inputType="number"
        android:id="@+id/et_g1"
        style="@style/styleGPA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:hint="@string/enter_grade_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:inputType="number"
        android:id="@+id/et_g2"
        style="@style/styleGPA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:hint="@string/enter_grade_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_g1" />

    <EditText
        android:inputType="number"
        android:id="@+id/et_g3"
        style="@style/styleGPA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:hint="@string/enter_grade_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_g2" />

    <EditText
        android:id="@+id/et_g4"
        style="@style/styleGPA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:hint="@string/enter_grade_4"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.158"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_g3" />

    <EditText
        android:id="@+id/et_g5"
        style="@style/styleGPA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:hint="@string/enter_grade_5"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.158"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_g4" />

    <TextView
        android:id="@+id/tv_gpa1"
        style="@style/styleGPA"
        android:text="@string/tv_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/et_g1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.63"
        app:layout_constraintStart_toEndOf="@+id/et_g1"
        app:layout_constraintTop_toTopOf="@+id/et_g1"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_gpa2"
        style="@style/styleGPA"
        android:text="@string/tv_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/et_g2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.63"
        app:layout_constraintStart_toEndOf="@+id/et_g2"
        app:layout_constraintTop_toTopOf="@+id/et_g2"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_gpa3"
        style="@style/styleGPA"
        android:text="@string/tv_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/et_g3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.645"
        app:layout_constraintStart_toEndOf="@+id/et_g3"
        app:layout_constraintTop_toTopOf="@+id/et_g3"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_gpa4"
        style="@style/styleGPA"
        android:text="@string/tv_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/et_g4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.63"
        app:layout_constraintStart_toEndOf="@+id/et_g4"
        app:layout_constraintTop_toTopOf="@+id/et_g4"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_gpa5"
        style="@style/styleGPA"
        android:text="@string/tv_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/et_g5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.63"
        app:layout_constraintStart_toEndOf="@+id/et_g5"
        app:layout_constraintTop_toTopOf="@+id/et_g5"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_calculated"
        style="@style/styleGPA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/calculated_gpa"
        app:layout_constraintBottom_toBottomOf="@+id/tv_gpa_calced"
        app:layout_constraintEnd_toEndOf="@+id/et_g5"
        app:layout_constraintStart_toStartOf="@+id/et_g5"
        app:layout_constraintTop_toTopOf="@+id/tv_gpa_calced" />

    <TextView
        android:id="@+id/tv_gpa_calced"
        style="@style/styleGPA"
        android:text="@string/tv_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_gpa5"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/tv_gpa5"
        app:layout_constraintTop_toBottomOf="@+id/tv_gpa5" />

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/btn_state1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_calculated"
        android:onClick="calculateGPA"/>

    /View>
</android.support.constraint.ConstraintLayout>